--- a/cloud/pom.xml
+++ b/cloud/pom.xml
@@ -7,6 +7,9 @@
     <groupId>com.york.cloud</groupId>
     <artifactId>cloud</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>springboot-sty</module>
+    </modules>
     <packaging>pom</packaging>
 
     <properties>
